# aqnwb

./: .codespell_ignore  .codespellrc  .gitignore  0__mainpage_8dox.html  1__userdocs_8dox.html  2__devdocs_8dox.html  BaseIO_8cpp.html  BaseIO_8cpp__incl.map  BaseIO_8cpp__incl.md5  BaseIO_8hpp.html  BaseIO_8hpp.js  BaseIO_8hpp__dep__incl.map  BaseIO_8hpp__dep__incl.md5  BaseIO_8hpp__incl.map  BaseIO_8hpp__incl.md5  BaseIO_8hpp_source.html  CHANGELOG.md  CMakeLists.txt  CMakePresets.json  CNAME  Channel_8cpp.html  Channel_8cpp__incl.map  Channel_8cpp__incl.md5  Channel_8hpp.html  Channel_8hpp.js  Channel_8hpp__dep__incl.map  Channel_8hpp__dep__incl.md5  Channel_8hpp__incl.map  Channel_8hpp__incl.md5  Channel_8hpp_source.html  Container_8cpp.html  Container_8cpp__incl.map  Container_8cpp__incl.md5  Container_8hpp.html  Container_8hpp__dep__incl.map  Container_8hpp__dep__incl.md5  Container_8hpp__incl.map  Container_8hpp__incl.md5  Container_8hpp_source.html  Data_8hpp.html  (+2620 more)
.github/: CODE_OF_CONDUCT.md  copilot-instructions.md
.github/workflows/: build-demo.yml  ci.yml  codespell.yml  coverage.yml  cppcheck.yml  debug-python-utils.yml  doxygen-build.yml  doxygen-gh-pages.yml  generate-classes.yml  joss-paper.yml  lint.yml  python-utils.yml  sanitize.yml  tests.yml  upgrade_schema.yml
_codeql_build_dir/: CPackConfig.cmake  CPackSourceConfig.cmake  Makefile  aqnwbConfigVersion.cmake  cmake_install.cmake
build2/: .ninja_deps  .ninja_log  CPackConfig.cmake  CPackSourceConfig.cmake  CTestTestfile.cmake  DartConfiguration.tcl  build.ninja  cmake_install.cmake  test_path
build2/data/: 1DData2DDataset.h5  1DData3DDataset.h5  2DData2DDataset.h5  2DData3DDataset.h5  AnnotationSeries.h5  ElectricalSeries.h5  ElectricalSeriesElectrodes.h5  ElectricalSeriesReadExample.h5  ElectricalSeriesSampleTracking.h5  ElectrodesTableRead.h5  ExampleTemplatedRegisteredType.h5  ReadHyperslabSelection.h5  SpikeEventSeries2D.h5  SpikeEventSeries3D.h5  createAnnotationSeries.nwb  createESandSES.nwb  createElectricalSeries.nwb  createElectricalSeriesNoTable.h5  createElectricalSeriesOutOfRange.h5  createElectricalSeriesWithSubset.nwb  createElectrodesTable.nwb  createMultipleProcessingModules.nwb  createProcessingModule.nwb  createProcessingModuleDynamicTable.nwb  createProcessingModuleTimeSeries.nwb  electrodeTable.h5  electrodeTableNoData.h5  exampleRecording.nwb  recObjectsWorkflow_1.h5  recObjectsWorkflow_2.h5  recObjectsWorkflow_3.h5  test.h5  testAttributeAndDatasetFieldsRead.nwb  testCanModifyObjectsMode.nwb  testContinuousRecording1.nwb  testDataHierarchyLink.h5  testDataLinkInvalidTarget.h5  testDataRecord.h5  testDataTypedDouble.h5  testDataTypedInt.h5  (+63 more)
build2/tests/: CTestTestfile.cmake  aqnwb_test-b12d07c_include.cmake  aqnwb_test-b12d07c_tests.cmake  cmake_install.cmake  reader_executable
cmake/: coverage.cmake  cppcheck-targets.cmake  cppcheck.cmake  dev-mode.cmake  docs-ci.cmake  docs.cmake  install-config.cmake  install-rules.cmake  lint-targets.cmake  lint.cmake  variables.cmake
demo/DANDISET_000232/: CMakeLists.txt  README.md  main.cpp
demo/inspect_electrical_series/: CMakeLists.txt  README.md  main.cpp
demo/labmetadata_extension_demo/: CMakeLists.txt  README.md
demo/labmetadata_extension_demo/spec/: ndx-labmetadata-example.extensions.yaml  ndx-labmetadata-example.namespace.yaml
demo/labmetadata_extension_demo/src/: LabMetaDataExtensionExample.cpp  LabMetaDataExtensionExample.hpp  main.cpp  ndx_labmetadata_example.hpp
docs/: Doxyfile.in
docs/examples/: link_timeseries_example.md
docs/layout/: header.html
docs/pages/: 0_install.dox  0_mainpage.dox  1_userdocs.dox  2_devdocs.dox  devdocs.dox  userdocs.dox
include/aqnwb/: BaseIO.hpp  Channel.hpp  Types.hpp  Utils.hpp  aqnwb.hpp
paper/joss/: paper.bib  paper.md
python_scripts/: make_test_table.py  run_validator.py
resources/: generate_nwb_schema_headers.sh  generate_spec_files.py  nwb_schema_to_cpp.py
resources/utils/: README.md  __init__.py  aqnwb_utils.py  cppcheck_to_sarif.py  generate_nwb_schema_headers.sh  generate_spec_files.py  pyproject.toml  requirements.txt  schematype_to_aqnwb.py  setup.py
search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_16.js  all_17.js  all_18.js  all_19.js  all_1a.js  all_1b.js  all_1c.js  all_1d.js  all_1e.js  all_1f.js  all_2.js  all_20.js  all_21.js  all_25.js  all_28.js  all_29.js  all_2b.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  (+122 more)
src/: BaseIO.cpp  BaseIO.hpp  Channel.cpp  Channel.hpp  FileWriter.cpp  FileWriter.hpp  HDF5IO.cpp  HDF5IO.hpp  NWBDataTypes.cpp  NWBDataTypes.hpp  NWBFile.cpp  NWBFile.hpp  Types.hpp  Utils.hpp  aqnwb.cpp  lib.cpp  lib.hpp  main.cpp
swig_proposal/: refined_proposal.md
swig_proposal/example/: AqnwbExtensions.cs  CMakeLists.txt  ExampleUsage.cs  README.md  example_usage.py
swig_proposal/example/cmake/: swig-bindings.cmake
swig_proposal/example/resources/: generate_swig_interfaces.py  generate_timeseries_swig.py
swig_proposal/example/resources/swig_templates/: timeseries.i.template
swig_proposal/example/swig/interfaces/: TimeSeries.i
tests/: CMakeLists.txt  aq-nwb_test.cpp  reader.cpp  testBase.cpp  testBaseIO.cpp  testChannel.cpp  testData.cpp  testDevice.cpp  testDynamicTable.cpp  testEcephys.cpp  testElementIdentifiers.cpp  testFile.cpp  testHDF5ArrayDataSetConfig.cpp  testHDF5IO.cpp  testHDF5IO_docs_examples.cpp  testHDF5RecordingData.cpp  testMisc.cpp  testNWBFile.cpp  testNWBRecording.cpp  testNamespaceRegistry.cpp  testProcessingModule.cpp  testReadIO.cpp  testRecordingObjects.cpp  testRecordingWorkflow.cpp  testRegisterType.cpp  testRegisteredType.cpp  testTimeSeries.cpp  testTypes.cpp  testUtils.hpp  testUtilsFunctions.cpp  testVectorData.cpp
tests/examples/: testWorkflowExamples.cpp  test_HDF5IO_examples.cpp  test_RegisteredType_example.cpp  test_ecephys_data_read.cpp  test_example.cpp  test_link_timeseries_example.cpp  test_templated_RegisteredType_example.cpp
(+161 files in other folders)
